P3_update-img+html_page_1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Shrikhand&display=swap" rel="stylesheet">
     
@@ -69,7 +70,7 @@
                     <div class="restaurant_item">
                         <div class="restaurant_item_image">
                             <div class="restaurant_sitcker_new"><p>Nouveau</p></div>
-                            <img src="images/restaurants/restaurant01.jpg" alt="La palette du goût">
+                            <img src="images/restaurants/restaurant_1.jpg" alt="La palette du goût">
                         </div>
                         <div class="restaurant_info_part">
                             <div class="restaurant_name_info">La palette du goût</div>
@@ -84,7 +85,7 @@
                     <div class="restaurant_item">
                         <div class="restaurant_item_image">
                             <div class="restaurant_sitcker_new"><p>Nouveau</p></div>
-                            <img src="images/restaurants/restaurant02.jpg" alt="La note enchantée">
+                            <img src="images/restaurants/restaurant_2.jpg" alt="La note enchantée">
                         </div>
                         <div class="restaurant_info_part">
                             <div class="restaurant_name_info">La note enchantée</div>
@@ -99,7 +100,7 @@
                     <div class="restaurant_item">
                         <div class="restaurant_item_image">
                             <div class="restaurant_sitcker_new"><p>Nouveau</p></div>
-                            <img src="images/restaurants/restaurant03.jpg" alt="A la française">
+                            <img src="images/restaurants/restaurant_3.jpg" alt="A la française">
                         </div>
                         <div class="restaurant_info_part">
                             <div class="restaurant_name_info">À la française</div>
@@ -114,14 +115,14 @@
                     <div class="restaurant_item">
                         <div class="restaurant_item_image">
                             <div class="restaurant_sitcker_new"><p>Nouveau</p></div>
-                            <img src="images/restaurants/restaurant04.jpg" alt="Le délice des sens">
+                            <img src="images/restaurants/restaurant_4.jpg" alt="Le délice des sens">
                         </div>
                         <div class="restaurant_info_part">
                             <div class="restaurant_name_info">Le délice des sens</div>
                             <div class="restaurant_city_info">Folie-Méricourt</div>
                         </div>
                         <div class="restaurant_heart">
-                            <i class="far fa-heart"></i>"
+                            <i class="far fa-heart"></i>
                         </div>
                     </div>
                 </a>
