--- a/menu_pages/la-note-enchantée.html
+++ b/menu_pages/la-note-enchantée.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La palette du goût</title>
+    <title>La note enchantée</title>
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="styles/style_menu.css">
@@ -27,13 +27,13 @@
 
     <!-- top image -->
         <div class="top_img">
-            <img class="img" src="../images/restaurants/restaurant_1.jpg" alt="La palette du goût">
+            <img class="img" src="../images/restaurants/restaurant_1.jpg" alt="La note enchantée">
         </div>
 
     <!-- menu -->
         <section id="menu">
             <div class="menu_top">
-                <h2 class="menu_top_title">La palette du goût</h2>
+                <h2 class="menu_top_title">La note enchantée</h2>
                 <div class="menu_heart">
                     <i class="far fa-heart"></i>
                 </div>
@@ -43,8 +43,8 @@
                     <div class="menu_bloc_title"><h3>Entrées</h3></div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Fricassée d'escargot</h3>
-                                <p class="dish_subtitle">Au piment d'Espelette</p>
+                                <h3 class="dish_title">Ravioles de foie gras</h3>
+                                <p class="dish_subtitle">Accompagnés de leur crème à la truffe</p>
                             </div>
                             <div class="dish_price">25€</div>
                         </div>
@@ -53,8 +53,8 @@
                         </div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Foie gras de canard mi-cuit</h3>
-                                <p class="dish_subtitle">Et ses copeaux de truffe noire</p>
+                                <h3 class="dish_title">Caviar osciètre</h3>
+                                <p class="dish_subtitle">Sur blini à la farine de blé noir</p>
                             </div>
                             <div class="dish_price">35€</div>
                         </div>
@@ -63,10 +63,20 @@
                         </div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Oeuf au plat</h3>
-                                <p class="dish_subtitle">Assaisonné à la truffe sur lit de caviar</p>
+                                <h3 class="dish_title">Homard et espuma de potiron</h3>
+                                <p class="dish_subtitle">Mariné aux zestes d'orange</p>
                             </div>
                             <div class="dish_price">20€</div>
+                        </div>
+                        <div class="selection__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                        <div class="menu_dishes">
+                            <div class="dish_info">
+                                <h3 class="dish_title">Foie gras de canard cuit entier</h3>
+                                <p class="dish_subtitle">Confiture de figue et pain toasté</p>
+                            </div>
+                            <div class="dish_price">35€</div>
                         </div>
                         <div class="selection__box">
                             <i class="fas fa-check-circle"></i>
@@ -76,8 +86,8 @@
                     <div class="menu_bloc_title"><h3>Plats</h3></div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Filet de boeuf aux herbes</h3>
-                                <p class="dish_subtitle">Accompagné de sa ribambelle de légumes</p>
+                                <h3 class="dish_title"></h3>Noix de coquilles Saint-Jacques</h3>
+                                <p class="dish_subtitle">Sur lit de purée de céleri-rave</p>
                             </div>
                             <div class="dish_price">40€</div>
                         </div>
@@ -86,8 +96,8 @@
                         </div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Parmentier de queue de boeuf</h3>
-                                <p class="dish_subtitle">À la truffe noire sur sa purée de panais</p>
+                                <h3 class="dish_title">Langoustine poêlée</h3>
+                                <p class="dish_subtitle">Purée de patate douce</p>
                             </div>
                             <div class="dish_price">35€</div>
                         </div>
@@ -96,8 +106,8 @@
                         </div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Filet de turbot</h3>
-                                <p class="dish_subtitle">Aux agrumes</p>
+                                <h3 class="dish_title">Mijoté de queue de boeuf</h3>
+                                <p class="dish_subtitle">Et riz sauvage aux zestes de citron</p>
                             </div>
                             <div class="dish_price">44€</div>
                         </div>
@@ -109,8 +119,8 @@
                     <div class="menu_bloc_title"><h3>Desserts</h3></div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Paris-Brest</h3>
-                                <p class="dish_subtitle">Revisité</p>
+                                <h3 class="dish_title">Macaron noisette et chocolat</h3>
+                                <p class="dish_subtitle">Glace au caramel brun et sel de Guérande</p>
                             </div>
                             <div class="dish_price">18€</div>
                         </div>
@@ -119,8 +129,8 @@
                         </div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Macaron au chocolat d'exception</h3>
-                                <p class="dish_subtitle">Et glace à la vanille de Madagascar</p>
+                                <h3 class="dish_title">Baba au rhum revisité</h3>
+                                <p class="dish_subtitle">Avec son coulis de citron</p>
                             </div>
                             <div class="dish_price">22€</div>
                         </div>
@@ -129,8 +139,8 @@
                         </div>
                         <div class="menu_dishes">
                             <div class="dish_info">
-                                <h3 class="dish_title">Mousse au chocolat</h3>
-                                <p class="dish_subtitle">Au piment d'Espelette et à la truffe noire</p>
+                                <h3 class="dish_title">Tarte au citron meringuée</h3>
+                                <p class="dish_subtitle">Déstructurée</p>
                             </div>
                             <div class="dish_price">23€</div>
                         </div>
