--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <div class="restaurant_city_info">Cité Rouge</div>
                         </div>
                         <div class="restaurant_heart">
-                            <i class="far fa-heart"></i>"
+                            <i class="far fa-heart"></i>
                         </div>
                     </div>
                 </a>
