--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh My Food!</title>
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="styles/style_index.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <!-- Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Shrikhand&display=swap" rel="stylesheet">
-    
+
 </head>
+
 <body> 
 
     <!-- header -->
@@ -28,7 +29,7 @@
     <main>
         <div class="location">
             <i class="fas fa-map-marker-alt" id="icon_location"></i>
-            <input type="text" value="Paris, Belleville" name="texte" onclick="texte.value='';" class="search_bar">
+            <input type="text" value="Paris, Belleville" name="texte" class= "search_bar">
         </div>
         <section class="hero">
             <h2 class="hero_title">Réservez le menu qui vous convient</h2>
@@ -77,7 +78,7 @@
                             <div class="restaurant_city_info">Ménilmontant</div>
                         </div>
                         <div class="restaurant_heart">
-                            <i class="far fa-heart"></i>"
+                            <i class="far fa-heart"></i>
                         </div>
                     </div>
                 </a>
@@ -92,7 +93,7 @@
                             <div class="restaurant_city_info">Charonne</div>
                         </div>
                         <div class="restaurant_heart">
-                            <i class="far fa-heart"></i>"
+                            <i class="far fa-heart"></i>
                         </div>
                     </div>
                 </a>
@@ -135,20 +136,20 @@
     <footer class="footer">
         <div class="footer_bloc">
             <div class="logo"><a href="index.html">ohmyfood</a></div>
-            <div class="footer_links">
-                <div class="footer_link">
+            <div class="footer_bloc-links">
+                <div class="footer_bloc-link">
                     <i class="fas fa-utensils"></i>
-                    <h3 class="footer_link_title">Proposer un restaurant</h3>
+                    <h3 class="footer_bloc-link_title">Proposer un restaurant</h3>
                 </div>
-                <div class="footer_link">
+                <div class="footer_bloc-link">
                     <i class="fas fa-hands-helping"></i>
-                    <h3 class="footer_link_title">Devenir partenaire</h3>
+                    <h3 class="footer_bloc-link_title">Devenir partenaire</h3>
                 </div>
-                <div class="footer_link">
-                    <h3 class="footer_link_title">Mentions légales</h3>
+                <div class="footer_bloc-link">
+                    <h3 class="footer_bloc-link_title">Mentions légales</h3>
                 </div>
-                <div class="footer_link">
-                    <h3 class="footer_link_title"><a href="mailto:contact@ohmyfood.com">Contact</a></h3>
+                <div class="footer_bloc-link">
+                    <h3 class="footer_bloc-link_title"><a href="mailto:contact@ohmyfood.com">Contact</a></h3>
                 </div>
             </div>
         </div>
