sass_search-location

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh My Food!</title>
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="public/style.css">
     <!-- Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <!-- Google Fonts -->
@@ -29,13 +29,13 @@
     <main>
         <div class="location">
             <i class="fas fa-map-marker-alt" id="icon_location"></i>
-            <input type="text" value="Paris, Belleville" name="texte" class= "search_bar">
+            <input type="text" value="Paris, Belleville" name="texte" class="search_bar">
         </div>
         <section class="hero">
             <h2 class="hero_title">Réservez le menu qui vous convient</h2>
             <p class="hero_text">Découvrez des restaurants d'exceptions, sélectionnés par nos soins.</p>
             <div class="hero_button">
-                <p>Explorer nos restaurants</p>
+                <p class="hero_button-sub">Explorer nos restaurants</p>
             </div>
         </section>
 
