--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <section class="hero">
             <h2 class="hero_title">Réservez le menu qui vous convient</h2>
-            <p class="hero_text">Découvrez des restaurants d'exceptions, sélectionnés par nos soins.</p>
+            <p class="hero_text">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
             <div class="hero_button">
                 <p class="hero_button-sub">Explorer nos restaurants</p>
             </div>
