sass_index-restaurants+footer

--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
             </div>
         </section>
 
-    <!-- using guidelines -->
-        <section class="using_guide">
-            <div class="using">
-                <h2 class="using_title">Fonctionnement</h2>
-                <div class="using_steps">
-                    <div class="using_step">
+    <!-- user notice -->
+        <section class="user_notice">
+            <div class="notice">
+                <h2 class="notice_title">Fonctionnement</h2>
+                <div class="notice_steps">
+                    <div class="notice_step">
                         <div class="step_number">1</div>
                         <div class="step_icon"><i class="fas fa-mobile-alt"></i></div>
                         <p class="step_text">Choisissez un restaurant</p>
                     </div>
-                    <div class="using_step">
+                    <div class="notice_step">
                         <div class="step_number">2</div>
                         <div class="step_icon"><i class="fas fa-list-ul"></i></div>
                         <p class="step_text">Composez votre menu</p>
                     </div>
-                    <div class="using_step">
+                    <div class="notice_step">
                         <div class="step_number">3</div>
                         <div class="step_icon"><i class="fas fa-store"></i></div>
                         <p class="step_text">Dégustez au restaurant</p>
@@ -70,60 +70,68 @@
                 <a href="menu_page/la-palette-du-gout.html">
                     <div class="restaurant_item">
                         <div class="restaurant_item_image">
-                            <div class="restaurant_sitcker_new"><p>Nouveau</p></div>
+                            <div class="restaurant_item_new"><p>Nouveau</p></div>
                             <img src="images/restaurants/restaurant_1.jpg" alt="La palette du goût">
                         </div>
-                        <div class="restaurant_info_part">
-                            <div class="restaurant_name_info">La palette du goût</div>
-                            <div class="restaurant_city_info">Ménilmontant</div>
-                        </div>
-                        <div class="restaurant_heart">
-                            <i class="far fa-heart"></i>
+                        <div class="restaurant_bloc">
+                            <div class="restaurant_bloc-info">
+                                <div class="restaurant_info-name">La palette du goût</div>
+                                <div class="restaurant_info-city">Ménilmontant</div>
+                            </div>
+                            <div class="restaurant_bloc-heart">
+                                <i class="far fa-heart"></i>
+                            </div>
                         </div>
                     </div>
                 </a>
                 <a href="menu_page/la-note-enchantee.html">
                     <div class="restaurant_item">
                         <div class="restaurant_item_image">
-                            <div class="restaurant_sitcker_new"><p>Nouveau</p></div>
+                            <div class="restaurant_item_new"><p>Nouveau</p></div>
                             <img src="images/restaurants/restaurant_2.jpg" alt="La note enchantée">
                         </div>
-                        <div class="restaurant_info_part">
-                            <div class="restaurant_name_info">La note enchantée</div>
-                            <div class="restaurant_city_info">Charonne</div>
-                        </div>
-                        <div class="restaurant_heart">
-                            <i class="far fa-heart"></i>
+                        <div class="restaurant_bloc">
+                            <div class="restaurant_bloc-info">
+                                <div class="restaurant_info-name">La note enchantée</div>
+                                <div class="restaurant_info-city">Charonne</div>
+                            </div>
+                            <div class="restaurant_bloc-heart">
+                                <i class="far fa-heart"></i>
+                            </div>
                         </div>
                     </div>
                 </a>
                 <a href="menu_page/a-la-francaise.html">
                     <div class="restaurant_item">
                         <div class="restaurant_item_image">
-                            <div class="restaurant_sitcker_new"><p>Nouveau</p></div>
+                            <div class="restaurant_item_new"><p>Nouveau</p></div>
                             <img src="images/restaurants/restaurant_3.jpg" alt="A la française">
                         </div>
-                        <div class="restaurant_info_part">
-                            <div class="restaurant_name_info">À la française</div>
-                            <div class="restaurant_city_info">Cité Rouge</div>
-                        </div>
-                        <div class="restaurant_heart">
-                            <i class="far fa-heart"></i>
+                        <div class="restaurant_bloc">
+                            <div class="restaurant_bloc-info">
+                                <div class="restaurant_info-name">À la française</div>
+                                <div class="restaurant_info-city">Cité Rouge</div>
+                            </div>
+                            <div class="restaurant_bloc-heart">
+                                <i class="far fa-heart"></i>
+                            </div>
                         </div>
                     </div>
                 </a>
                 <a href="menu_page/le-delice-des-sens.html">
                     <div class="restaurant_item">
                         <div class="restaurant_item_image">
-                            <div class="restaurant_sitcker_new"><p>Nouveau</p></div>
+                            <div class="restaurant_item_new"><p>Nouveau</p></div>
                             <img src="images/restaurants/restaurant_4.jpg" alt="Le délice des sens">
                         </div>
-                        <div class="restaurant_info_part">
-                            <div class="restaurant_name_info">Le délice des sens</div>
-                            <div class="restaurant_city_info">Folie-Méricourt</div>
-                        </div>
-                        <div class="restaurant_heart">
-                            <i class="far fa-heart"></i>
+                        <div class="restaurant_bloc">
+                            <div class="restaurant_bloc-info">
+                                <div class="restaurant_info-name">Le délice des sens</div>
+                                <div class="restaurant_info-city">Folie-Méricourt</div>
+                            </div>
+                            <div class="restaurant_bloc-heart">
+                                <i class="far fa-heart"></i>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -139,14 +147,14 @@
             <div class="footer_bloc-links">
                 <div class="footer_bloc-link">
                     <i class="fas fa-utensils"></i>
-                    <h3 class="footer_bloc-link_title">Proposer un restaurant</h3>
+                    <h3 class="footer_bloc-link_title"><a href="#">Proposer un restaurant</h3></a>
                 </div>
                 <div class="footer_bloc-link">
                     <i class="fas fa-hands-helping"></i>
-                    <h3 class="footer_bloc-link_title">Devenir partenaire</h3>
+                    <h3 class="footer_bloc-link_title"><a href="#">Devenir partenaire</h3></a>
                 </div>
-                <div class="footer_bloc-link">
-                    <h3 class="footer_bloc-link_title">Mentions légales</h3>
+                <div class="footer_bloc-link"><a href="#">
+                    <h3 class="footer_bloc-link_title">Mentions légales</h3></a>
                 </div>
                 <div class="footer_bloc-link">
                     <h3 class="footer_bloc-link_title"><a href="mailto:contact@ohmyfood.com">Contact</a></h3>
